trunk/HAWAppServer/src/main/java/de/minimum/hawapp/server/calendar/parser/CalendarParser.java
// Generated from C:\Users\jannik\eclipse_workspaces\android_project\HAWAppServer\src\main\java\de\minimum\hawapp\server\calendar\parser\Calendar.g4 by ANTLR 4.0
package de.minimum.hawapp.server.calendar.parser;

  import java.text.DateFormat;
import java.text.ParseException;
import java.util.Calendar;
import java.util.Date;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;
import java.util.Locale;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalendarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOM=1, VERSION=2, STUNDENPLAN=3, SEMESTERGRUPPE=4, TERMINBLOCK_HEADER=5, 
		KOMMA=6, DAY=7, WORD=8, NEWLINE=9, WS=10;
	public static final String[] tokenNames = {
		"<INVALID>", "'vom'", "'Vers'", "'Stundenplan'", "'Semestergruppe'", "'Name,Dozent,Raum,Tag,Anfang,Ende'", 
		"','", "DAY", "WORD", "NEWLINE", "WS"
	};
	public static final int
		RULE_prog = 0, RULE_header = 1, RULE_stundenplan = 2, RULE_semester = 3, 
		RULE_versionNr = 4, RULE_stand = 5, RULE_semgruppe = 6, RULE_terminBlock = 7, 
		RULE_weeks = 8, RULE_termine = 9, RULE_termin = 10, RULE_name = 11, RULE_dozent = 12, 
		RULE_raum = 13, RULE_tag = 14, RULE_anfang = 15, RULE_ende = 16;
	public static final String[] ruleNames = {
		"prog", "header", "stundenplan", "semester", "versionNr", "stand", "semgruppe", 
		"terminBlock", "weeks", "termine", "termin", "name", "dozent", "raum", 
		"tag", "anfang", "ende"
	};

	@Override
	public String getGrammarFileName() { return "Calendar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public CalendarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public HeaderContext header;
		public TerminBlockContext tblock2;
		public TerminBlockContext terminBlock(int i) {
			return getRuleContext(TerminBlockContext.class,i);
		}
		public List<TerminBlockContext> terminBlock() {
			return getRuleContexts(TerminBlockContext.class);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); ((ProgContext)_localctx).header = header();
			setState(36); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(35); terminBlock(((ProgContext)_localctx).header.year);
				}
				}
				setState(38); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STUNDENPLAN) {
				{
				{
				setState(40); ((ProgContext)_localctx).header = header();
				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(41); ((ProgContext)_localctx).tblock2 = terminBlock(((ProgContext)_localctx).header.year);
					}
					}
					setState(44); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WORD );
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Integer year;
		public StandContext stand;
		public TerminalNode VOM() { return getToken(CalendarParser.VOM, 0); }
		public TerminalNode VERSION() { return getToken(CalendarParser.VERSION, 0); }
		public List<TerminalNode> WS() { return getTokens(CalendarParser.WS); }
		public StandContext stand() {
			return getRuleContext(StandContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CalendarParser.NEWLINE); }
		public TerminalNode WS(int i) {
			return getToken(CalendarParser.WS, i);
		}
		public TerminalNode SEMESTERGRUPPE() { return getToken(CalendarParser.SEMESTERGRUPPE, 0); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CalendarParser.NEWLINE, i);
		}
		public TerminalNode STUNDENPLAN() { return getToken(CalendarParser.STUNDENPLAN, 0); }
		public VersionNrContext versionNr() {
			return getRuleContext(VersionNrContext.class,0);
		}
		public SemgruppeContext semgruppe() {
			return getRuleContext(SemgruppeContext.class,0);
		}
		public SemesterContext semester() {
			return getRuleContext(SemesterContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); match(STUNDENPLAN);
			setState(52); match(WS);
			setState(53); semester();
			setState(54); match(WS);
			setState(55); match(VERSION);
			setState(56); match(WS);
			setState(57); versionNr();
			setState(58); match(WS);
			setState(59); match(VOM);
			setState(60); match(WS);
			setState(61); ((HeaderContext)_localctx).stand = stand();
			((HeaderContext)_localctx).year = ((HeaderContext)_localctx).stand.year;
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(63); match(WS);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69); match(NEWLINE);
			setState(70); match(SEMESTERGRUPPE);
			setState(71); match(WS);
			setState(72); semgruppe();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(73); match(WS);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StundenplanContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(CalendarParser.WORD, 0); }
		public StundenplanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stundenplan; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitStundenplan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StundenplanContext stundenplan() throws RecognitionException {
		StundenplanContext _localctx = new StundenplanContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stundenplan);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SemesterContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(CalendarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(CalendarParser.WORD, i);
		}
		public TerminalNode WS() { return getToken(CalendarParser.WS, 0); }
		public SemesterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semester; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitSemester(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SemesterContext semester() throws RecognitionException {
		SemesterContext _localctx = new SemesterContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_semester);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(WORD);
			setState(84); match(WS);
			setState(85); match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionNrContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(CalendarParser.WORD, 0); }
		public VersionNrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionNr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitVersionNr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionNrContext versionNr() throws RecognitionException {
		VersionNrContext _localctx = new VersionNrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_versionNr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StandContext extends ParserRuleContext {
		public Integer year;
		public Token yearString;
		public TerminalNode WORD() { return getToken(CalendarParser.WORD, 0); }
		public StandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stand; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitStand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StandContext stand() throws RecognitionException {
		StandContext _localctx = new StandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); ((StandContext)_localctx).yearString = match(WORD);
			((StandContext)_localctx).year = Integer.parseInt(((((StandContext)_localctx).yearString!=null?((StandContext)_localctx).yearString.getText():null).split("\\.")[2]));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SemgruppeContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(CalendarParser.WORD, 0); }
		public SemgruppeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semgruppe; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitSemgruppe(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SemgruppeContext semgruppe() throws RecognitionException {
		SemgruppeContext _localctx = new SemgruppeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_semgruppe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminBlockContext extends ParserRuleContext {
		public Integer year;
		public WeeksContext weekList;
		public WeeksContext weeks;
		public TerminalNode NEWLINE() { return getToken(CalendarParser.NEWLINE, 0); }
		public TerminalNode TERMINBLOCK_HEADER() { return getToken(CalendarParser.TERMINBLOCK_HEADER, 0); }
		public WeeksContext weeks() {
			return getRuleContext(WeeksContext.class,0);
		}
		public TermineContext termine() {
			return getRuleContext(TermineContext.class,0);
		}
		public TerminBlockContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TerminBlockContext(ParserRuleContext parent, int invokingState, Integer year) {
			super(parent, invokingState);
			this.year = year;
		}
		@Override public int getRuleIndex() { return RULE_terminBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitTerminBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminBlockContext terminBlock(Integer year) throws RecognitionException {
		TerminBlockContext _localctx = new TerminBlockContext(_ctx, getState(), year);
		enterRule(_localctx, 14, RULE_terminBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); ((TerminBlockContext)_localctx).weekList = ((TerminBlockContext)_localctx).weeks = weeks();
			setState(95); match(TERMINBLOCK_HEADER);
			setState(96); match(NEWLINE);
			setState(97); termine(((TerminBlockContext)_localctx).weeks.weekList, _localctx.year);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WeeksContext extends ParserRuleContext {
		public List<Integer> weekList;
		public Token week;
		public List<TerminalNode> WORD() { return getTokens(CalendarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(CalendarParser.WORD, i);
		}
		public List<TerminalNode> WS() { return getTokens(CalendarParser.WS); }
		public TerminalNode NEWLINE() { return getToken(CalendarParser.NEWLINE, 0); }
		public TerminalNode WS(int i) {
			return getToken(CalendarParser.WS, i);
		}
		public List<TerminalNode> KOMMA() { return getTokens(CalendarParser.KOMMA); }
		public TerminalNode KOMMA(int i) {
			return getToken(CalendarParser.KOMMA, i);
		}
		public WeeksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weeks; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitWeeks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WeeksContext weeks() throws RecognitionException {
		WeeksContext _localctx = new WeeksContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_weeks);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((WeeksContext)_localctx).weekList = new ArrayList<Integer>();
			{
			setState(100); ((WeeksContext)_localctx).week = match(WORD);
			if((((WeeksContext)_localctx).week!=null?((WeeksContext)_localctx).week.getText():null).contains("-")){
			                    String[] splited=(((WeeksContext)_localctx).week!=null?((WeeksContext)_localctx).week.getText():null).split("-");
			                    int end=Integer.parseInt(splited[1]);
			                    for(int i=Integer.parseInt(splited[0]); i<=end ; i++){
						_localctx.weekList.add(i);
			                    }
					}else{
			               _localctx.weekList.add(Integer.parseInt((((WeeksContext)_localctx).week!=null?((WeeksContext)_localctx).week.getText():null)));};
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KOMMA) {
				{
				{
				{
				setState(102); match(KOMMA);
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(103); match(WS);
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(109); ((WeeksContext)_localctx).week = match(WORD);
				 _localctx.weekList.add(Integer.parseInt((((WeeksContext)_localctx).week!=null?((WeeksContext)_localctx).week.getText():null)));
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(116); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermineContext extends ParserRuleContext {
		public List<Integer> wochen;
		public Integer year;
		public List<TerminContext> termin() {
			return getRuleContexts(TerminContext.class);
		}
		public TerminContext termin(int i) {
			return getRuleContext(TerminContext.class,i);
		}
		public TermineContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TermineContext(ParserRuleContext parent, int invokingState, List<Integer> wochen, Integer year) {
			super(parent, invokingState);
			this.wochen = wochen;
			this.year = year;
		}
		@Override public int getRuleIndex() { return RULE_termine; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitTermine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermineContext termine(List<Integer> wochen,Integer year) throws RecognitionException {
		TermineContext _localctx = new TermineContext(_ctx, getState(), wochen, year);
		enterRule(_localctx, 18, RULE_termine);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(118); termin(_localctx.wochen, _localctx.year);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(121); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminContext extends ParserRuleContext {
		public List<Integer> wochen;
		public Integer year;
		public NameContext name;
		public DozentContext dozent;
		public RaumContext raum;
		public AnfangContext anfang;
		public EndeContext ende;
		public EndeContext ende() {
			return getRuleContext(EndeContext.class,0);
		}
		public AnfangContext anfang() {
			return getRuleContext(AnfangContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(CalendarParser.WS); }
		public TerminalNode NEWLINE() { return getToken(CalendarParser.NEWLINE, 0); }
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public DozentContext dozent() {
			return getRuleContext(DozentContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode WS(int i) {
			return getToken(CalendarParser.WS, i);
		}
		public TerminalNode EOF() { return getToken(CalendarParser.EOF, 0); }
		public RaumContext raum() {
			return getRuleContext(RaumContext.class,0);
		}
		public List<TerminalNode> KOMMA() { return getTokens(CalendarParser.KOMMA); }
		public TerminalNode KOMMA(int i) {
			return getToken(CalendarParser.KOMMA, i);
		}
		public TerminContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TerminContext(ParserRuleContext parent, int invokingState, List<Integer> wochen, Integer year) {
			super(parent, invokingState);
			this.wochen = wochen;
			this.year = year;
		}
		@Override public int getRuleIndex() { return RULE_termin; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitTermin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminContext termin(List<Integer> wochen,Integer year) throws RecognitionException {
		TerminContext _localctx = new TerminContext(_ctx, getState(), wochen, year);
		enterRule(_localctx, 20, RULE_termin);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(123); match(WS);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129); ((TerminContext)_localctx).name = name();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(130); match(WS);
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136); match(KOMMA);
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(137); match(WS);
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(143); ((TerminContext)_localctx).dozent = dozent();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(144); match(WS);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150); match(KOMMA);
			setState(154);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(151); match(WS);
					}
					} 
				}
				setState(156);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(157); ((TerminContext)_localctx).raum = raum();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(158); match(WS);
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164); match(KOMMA);
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(165); match(WS);
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171); tag();
			setState(172); match(KOMMA);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(173); match(WS);
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(179); ((TerminContext)_localctx).anfang = anfang();
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(180); match(WS);
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(186); match(KOMMA);
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(187); match(WS);
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(193); ((TerminContext)_localctx).ende = ende();
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(194); match(WS);
				}
				}
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(200);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NEWLINE) ) {
			_errHandler.recoverInline(this);
			}
			consume();

			      //System.out.println("name: "+ (((TerminContext)_localctx).name!=null?_input.getText(((TerminContext)_localctx).name.start,((TerminContext)_localctx).name.stop):null) + " dozent: " + (((TerminContext)_localctx).dozent!=null?_input.getText(((TerminContext)_localctx).dozent.start,((TerminContext)_localctx).dozent.stop):null) + " raum: " + (((TerminContext)_localctx).raum!=null?_input.getText(((TerminContext)_localctx).raum.start,((TerminContext)_localctx).raum.stop):null) + " begin: " + (((TerminContext)_localctx).anfang!=null?_input.getText(((TerminContext)_localctx).anfang.start,((TerminContext)_localctx).anfang.stop):null) + " end: "+ (((TerminContext)_localctx).ende!=null?_input.getText(((TerminContext)_localctx).ende.start,((TerminContext)_localctx).ende.stop):null));
			     
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(CalendarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(CalendarParser.WORD, i);
		}
		public List<TerminalNode> WS() { return getTokens(CalendarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(CalendarParser.WS, i);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_name);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(211); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(203); match(WORD);
				setState(208);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(204); match(WS);
						setState(205); match(WORD);
						}
						} 
					}
					setState(210);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				}
				}
				}
				setState(213); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DozentContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(CalendarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(CalendarParser.WORD, i);
		}
		public List<TerminalNode> WS() { return getTokens(CalendarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(CalendarParser.WS, i);
		}
		public DozentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dozent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarVisitor ) return ((CalendarVisitor<? extends T>)visitor).visitDozent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DozentContext dozent() throws RecognitionException {
		DozentContext _localctx = new DozentContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_dozent);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(225);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD) {
				{
				{
				setState(215); match(WORD);
				setState(220);
